src/objects/Product_Item__c.object
<CustomObject>
    <fields>
        <fullName>Adjustable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates whether the values may later be adjusted in the
commercial product value)</description>
        <label>Adjustable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculation_Order__c</fullName>
        <label>Calculation Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criterium__c</fullName>
        <label>Criterium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Single Meter</fullName>
                </value>
                <value>
                    <fullName>Double Meter</fullName>
                </value>
                <value>
                    <fullName>Exclusive Night</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EAV</fullName>
                </value>
                <value>
                    <fullName>EAV High (Day)</fullName>
                </value>
                <value>
                    <fullName>EAV Low (Night)</fullName>
                </value>
                <value>
                    <fullName>EAV (Exclusive Night)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Product__c</fullName>
        <label>Master Product</label>
        <referenceTo>Master_Product__c</referenceTo>
        <relationshipLabel>Product Items</relationshipLabel>
        <relationshipName>Product_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+ Value</fullName>
                </value>
                <value>
                    <fullName>* Value</fullName>
                </value>
                <value>
                    <fullName>* (1 - Value)</fullName>
                </value>
                <value>
                    <fullName>+ (Value * Field)</fullName>
                </value>
                <value>
                    <fullName>+ (12 * Value)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage_Value__c</fullName>
        <label>Percentage Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Group__c</fullName>
        <label>Price Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Value__c</fullName>
        <label>Rate Value</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>If_Variable_true_Adjustable_is_false</fullName>
        <active>true</active>
        <errorConditionFormula>Adjustable__c = True &amp;&amp;  Variable__c = True</errorConditionFormula>
        <errorMessage>If &quot;Variable&quot; is checked, then “Adjustable&quot; must be false.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_Value_Must_Be_Entered</fullName>
        <active>false</active>
        <errorConditionFormula>(NOT(ISBLANK(Percentage_Value__c)) &amp;&amp; NOT( ISPICKVAL(Value_Type__c,&quot;Percentage&quot;))) ||  (ISPICKVAL(Value_Type__c,&quot;Percentage&quot;) &amp;&amp; (ISBLANK(Percentage_Value__c)))</errorConditionFormula>
        <errorMessage>Percentage Value Must be filled if Value type is Percentage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_Value_Must_Be_Entered</fullName>
        <active>false</active>
        <errorConditionFormula>(NOT(ISBLANK(Rate_Value__c)) &amp;&amp; NOT( ISPICKVAL(Value_Type__c,&quot;Rate&quot;))) || (ISPICKVAL(Value_Type__c,&quot;Rate&quot;) &amp;&amp; (ISBLANK(Rate_Value__c)))</errorConditionFormula>
        <errorMessage>Rate Value Must be filled if Value type is Rate</errorMessage>
    </validationRules>
</CustomObject>